samples/_failures_safe/1761305265_43e060_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7ff4ef10.c: In function ‘read_token’:
./samples/SAFE/__tmp_7ff4ef10.c:148:23: error: ‘TOKEN_DELIM’ undeclared (first use in this function); did you mean ‘TOKEN_EOF’?
  148 |         token->type = TOKEN_DELIM
      |                       ^~~~~~~~~~~
      |                       TOKEN_EOF
./samples/SAFE/__tmp_7ff4ef10.c:148:23: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_7ff4ef10.c:148:34: error: expected ‘;’ at end of input
  148 |         token->type = TOKEN_DELIM
      |                                  ^
      |                                  ;
./samples/SAFE/__tmp_7ff4ef10.c:148:9: error: expected declaration or statement at end of input
  148 |         token->type = TOKEN_DELIM
      |         ^~~~~
./samples/SAFE/__tmp_7ff4ef10.c:148:9: error: expected declaration or statement at end of input
